Adicionando plugin